--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="fr-input-group {% if form_input.errors %}fr-select-group--error{% endif %}">
     {% if label %}
         <label class="fr-label" for="{{form_input.id_for_label}}">
@@ -5,16 +7,23 @@
             {% include "common/mandatory_field.html" with form_input=form_input %}
         </label>
     {% endif %}
-    <input
-        class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
-        aria-describedby="text-input-error-desc-error"
-        type="text" id="{{form_input.id_for_label}}"
-        name="{{form_input.html_name}}"
-        value="{{ form_input.value|default_if_none:'' }}"
-        {% if not editable %}disabled{% endif %}>
+    <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
+        <input
+            class="fr-input {% if form_input.errors %}fr-input--error{% endif %}"
+            aria-describedby="text-input-error-desc-error"
+            type="text"
+            id="{{form_input.id_for_label}}"
+            name="{{form_input.html_name}}"
+            value="{{ form_input.value|default_if_none:'' }}"
+            {% include "common/form/disable_form_input.html" %}>
+        {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
+    </div>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
             {{ error }}
         </p>
     {% endfor %}
 </div>
+
+{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name convention=convention object_field=object_field comments=comments %}
+
