--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -5,6 +5,7 @@
         <label class="fr-label" for="{{form_input.id_for_label}}">
             {{ label }}
             {% include "common/mandatory_field.html" with form_input=form_input %}
+            {% include "common/help_field.html" with form_input=form_input %}
         </label>
     {% endif %}
     <div class="fr-mt-1w block--row-strech" id="{{form_input.id_for_label}}_div">
