numero Galion in bold !

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -99,7 +99,7 @@
                                         </div>
                                         <div class="table--limited-height">
                                             {% if request.user.is_instructeur %}
-                                                {% include "common/display_field_if_exists.html" with label="Numero Galion" value=programme.numero_galion %}
+                                                <b>{% include "common/display_field_if_exists.html" with label="Numero Galion" value=programme.numero_galion %}</b>
                                             {% endif %}
                                             {% include "common/display_field_if_exists.html" with label="Nom" value=programme.nom object_field="programme__nom__"|add:programme_uuid %}
                                             {% include "common/display_field_if_exists.html" with label="Adresse" value=programme.adresse object_field="programme__adresse__"|add:programme_uuid %}
