--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -43,7 +43,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:selection_update' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="table--limited-height">
@@ -65,7 +65,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="table--limited-height">
@@ -94,7 +94,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:programme' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="table--limited-height">
@@ -126,7 +126,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="table--limited-height">
@@ -159,7 +159,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}#id_reference_cadastrale_div" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         {% include "common/display_text_and_files_if_exists.html" with text=programme.reference_cadastrale_text file_list=programme.reference_cadastrale_files.values %}
@@ -222,7 +222,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:edd' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="table--limited-height">
@@ -290,7 +290,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:prets' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <p class="fr-my-1w">Prêts : </p>
@@ -363,7 +363,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:logements' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="fr-table fr-table--bordered table--limited-height">
@@ -466,7 +466,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="fr-table fr-table--bordered table--limited-height">
@@ -536,7 +536,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="fr-table fr-table--bordered table--limited-height">
@@ -594,7 +594,7 @@
                                                 </h4>
                                             </div>
                                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:comments' convention_uuid=convention.uuid %}" >
-                                                <span class="fr-fi-edit-line" aria-hidden="true">Editer</span>
+                                                <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
                                         <div class="table--limited-height">
