--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -30,6 +30,9 @@
                     <li class="fr-footer__content-item">
                         <a class="fr-footer__content-link" href="https://data.gouv.fr" target="_blank" rel="noopener">data.gouv.fr</a>
                     </li>
+                    <li class="fr-footer__content-item">
+                        <a class="fr-footer__content-link" href="https://beta.gouv.fr" target="_blank" rel="noopener">beta.gouv.fr</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -39,16 +42,10 @@
                     <a class="fr-footer__bottom-link" href="#">Plan du site</a>
                 </li>
                 <li class="fr-footer__bottom-item">
-                    <a class="fr-footer__bottom-link" href="#">Accessibilité: partiellement conforme</a>
+                    <a class="fr-footer__bottom-link" href="#">Accessibilité: non-conforme</a>
                 </li>
                 <li class="fr-footer__bottom-item">
-                    <a class="fr-footer__bottom-link" href="#">Mentions légales</a>
-                </li>
-                <li class="fr-footer__bottom-item">
-                    <a class="fr-footer__bottom-link" href="#">Données personnelles</a>
-                </li>
-                <li class="fr-footer__bottom-item">
-                    <a class="fr-footer__bottom-link" href="#">Gestion des cookies</a>
+                    <a class="fr-footer__bottom-link" href="{% url 'cgu' %}">Conditions générales d'utilisation</a>
                 </li>
             </ul>
             <div class="fr-footer__bottom-copy">
