create a first version of the page Accesibilité

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -42,10 +42,10 @@
                     <a class="fr-footer__bottom-link" href="#">Plan du site</a>
                 </li>
                 <li class="fr-footer__bottom-item">
-                    <a class="fr-footer__bottom-link" href="#">Accessibilité: non-conforme</a>
+                    <a class="fr-footer__bottom-link" href="{% url 'accessibilite' %}">Accessibilité: non-conforme</a>
                 </li>
                 <li class="fr-footer__bottom-item">
-                    <a class="fr-footer__bottom-link" href="{% url 'cgu' %}">Conditions générales d'utilisation</a>
+                    <a class="fr-footer__bottom-link" href="{% url 'cgu' %}">Conditions générales d'utilisation (mentions légales et gestion des données personnelles)</a>
                 </li>
             </ul>
             <div class="fr-footer__bottom-copy">
