--- a/templates/editorial/cgu.html
+++ b/templates/editorial/cgu.html
@@ -15,7 +15,11 @@
 
                     <h2>Présentation du service</h2>
 
-                    <p>... cf. fiche produit beta</p>
+                    <p>La plateforme APiLos contribue à accélérer le versement de l’Aide Personnalisée au Logement (APL) et réduire l’insécurité locative dans le logement social.</p>
+
+                    <p>Elle a pour mission de fiabiliser les déclarations de convention APL signées entre les bailleurs de logements sociaux et les services instructeurs de l'Etat.</p>
+
+                    <p>Pour en savoir plus: https://beta.gouv.fr/startups/apilos.html</p>
 
                     <h3 class="">Vocabulaire&nbsp;:</h3>
 
@@ -31,9 +35,9 @@
 
                     <h2 class="">Objet</h2>
 
-                    <h3 class="">Coté Bailleur</h3>
+                    <h3 class="">Pour les bailleurs</h3>
 
-                    <p>La plateforme APiLos est accessible <a href="/">ici</a> qui vous permet de&nbsp;:</p>
+                    <p>La plateforme APiLos est accessible <a href="https://apilos.beta.gouv.fr">ici</a>, elle vous permet de&nbsp;:</p>
 
                     <ul class="fr-mb-5w">
                         <li>Faire une demande de convention</li>
@@ -42,18 +46,12 @@
 
                     <h3 class="">Coté Instructeur</h3>
 
-                    <p>La plateforme APiLos est accessible <a href="/">ici</a> qui vous permet de&nbsp;:</p>
+                    <p>La plateforme APiLos est accessible <a href="https://apilos.beta.gouv.fr">ici</a>, elle vous permet de&nbsp;:</p>
 
                     <ul class="fr-mb-5w">
                         <li>Instruire vos demandes de conventions</li>
                         <li>Suivre les conventions en cours d'instructions ou instruites</li>
                     </ul>
-
-                    <hr class="fr-col-12 fr-my-3w">
-
-                    <h2 class="">Qualité des données publiées</h2>
-
-                    <p>Est-ce qu'on a besoin de cette section ?</p>
 
                     <hr class="fr-col-12 fr-my-3w">
 
