manage others event email  : à instruire and validé

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -664,7 +664,7 @@
                             {% else %}
                                 <p class="fr-alert__title">La convention a été validée le {{ convention.valide_le|date:"j F Y" }}</p>
                             {% endif %}
-                            <p class="fr-my-3w"><b>Bientôt</b>, nous serons en mesure de prendre en charge la suite du processus de conventionnement dans l'interface</p>
+                            <p class="fr-my-3w"><b>Bientôt</b>, nous serons en mesure de prendre en charge la suite du processus de conventionnement sur la plateforme APiLos</p>
                         </div>
                     </div>
 
