--- a/templates/editorial/cgu.html
+++ b/templates/editorial/cgu.html
@@ -94,9 +94,8 @@
                     <blockquote class="bl-highlight">
                         <address>
                             Le Ministère de la Transition écologique et solidaire - Ministère de la Cohésion des territoires et des Relations avec les collectivités territoriales<br>
-                            Délégation ministérielle à l’accessibilité<br>
+                            Délégation ministérielle des aides à la pierre<br>
                             APiLos<br>
-                            Sabine Marini<br>
                             Grande Arche<br>
                             92055 La Défense Cedex
                         </address>
@@ -131,7 +130,7 @@
                         <li>Par voie postale&nbsp;:
                             <blockquote class="bl-highlight">
                                 Ministère de la Transition écologique et solidaire<br>
-                                Délégation ministérielle à l’accessibilité<br>
+                                Délégation ministérielle des aides à la pierre<br>
                                 APiLos<br>
                                 Grande Arche <br>
                                 92055 La Défense Cedex
