Check send copy by default to notify instructeur or bailleur

--- a/templates/conventions/bailleur_notification.html
+++ b/templates/conventions/bailleur_notification.html
@@ -18,7 +18,8 @@
                         <input
                             type="checkbox"
                             id="{{notificationForm.send_copy.id_for_label}}"
-                            name="{{notificationForm.send_copy.html_name}}">
+                            name="{{notificationForm.send_copy.html_name}}"
+                            checked>
                         <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">envoyez-moi une copie du message envoyé
                         </label>
                     </div>
