--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -290,11 +290,11 @@
                                                     Financements
                                                 </h4>
                                             </div>
-                                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:prets' convention_uuid=convention.uuid %}" >
+                                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:financement' convention_uuid=convention.uuid %}" >
                                                 <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
                                             </a>
                                         </div>
-                                        <p class="fr-my-1w">Prêts : </p>
+                                        <p class="fr-my-1w">Prêts & Subventions : </p>
                                         <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                                             <table>
                                                 <thead>
