--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -49,15 +49,15 @@
 
                         <h4>Signataire de la convention</h4>
 
-                        {% include "common/form/input_text.html" with form_input=form.dg_nom label="Nom du signataire de la convention" object_field="bailleur__dg_nom__"|add:form.uuid.value %}
+                        {% include "common/form/input_text.html" with form_input=form.signataire_nom label="Nom du signataire de la convention" object_field="bailleur__signataire_nom__"|add:form.uuid.value %}
 
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                    {% include "common/form/input_text.html" with form_input=form.dg_fonction label="Fonction du signataire de la convention" object_field="bailleur__dg_fonction__"|add:form.uuid.value %}
+                                    {% include "common/form/input_text.html" with form_input=form.signataire_fonction label="Fonction du signataire de la convention" object_field="bailleur__signataire_fonction__"|add:form.uuid.value %}
                                 </div>
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
-                                    {% include "common/form/input_date.html" with form_input=form.dg_date_deliberation label="Date de délibération" object_field="bailleur__dg_date_deliberation__"|add:form.uuid.value %}
+                                    {% include "common/form/input_date.html" with form_input=form.signataire_date_deliberation label="Date de délibération" object_field="bailleur__signataire_date_deliberation__"|add:form.uuid.value %}
                                 </div>
                             </div>
                         </div>
