--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -77,9 +77,9 @@
                                                 {% include "common/display_field_if_exists.html" with label="Adresse" value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
                                                 {% include "common/display_field_if_exists.html" with label="Code postal" value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
                                                 {% include "common/display_field_if_exists.html" with label="Ville" value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
-                                                {% include "common/display_field_if_exists.html" with label="Nom du signataire de la convention" value=bailleur.dg_nom object_field="bailleur__dg_nom__"|add:bailleur_uuid %}
-                                                {% include "common/display_field_if_exists.html" with label="Fonction du signataire de la convention" value=bailleur.dg_fonction object_field="bailleur__dg_fonction__"|add:bailleur_uuid %}
-                                                {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.dg_date_deliberation object_field="bailleur__dg_date_deliberation__"|add:bailleur_uuid %}
+                                                {% include "common/display_field_if_exists.html" with label="Nom du signataire de la convention" value=bailleur.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
+                                                {% include "common/display_field_if_exists.html" with label="Fonction du signataire de la convention" value=bailleur.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}
+                                                {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
                                             {% endwith %}
                                         </div>
                                     </div>
