--- a/templates/conventions/instructeur_validation.html
+++ b/templates/conventions/instructeur_validation.html
@@ -1,7 +1,7 @@
 {% if request.user.is_instructeur %}
     <div class="fr-col-md-12  fr-py-5w">
         <div role="alert" class="fr-alert fr-alert--error">
-            {% if convention.statut == 'INSTRUCTION' %}
+            {% if convention.is_instruction_ongoing %}
                 <p class="fr-mb-3w">Une fois la convention générée, si celle-ci correspond aux attendus, vous pouvez l'envoyer au bailleur par email et cliquer sur la bouton ci-dessous.
                     Cela nous permet de suivre le statut de la convention en temps réel.</p>
                 <div>
