--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -50,7 +50,7 @@
                                     <th scope="col">Ville</th>
                                     <th scope="col">Nombre de logements à conventionner</th>
                                     <th scope="col">Statut</th>
-                                    <th scope="col">Action</th>
+                                    <th scope="col" class="col__width--140">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -68,38 +68,21 @@
                                         <td>
                                             {% if request.user.is_bailleur %}
                                                 {% if convention.is_bailleur_editable %}
-                                                    <button class="fr-btn fr-fi-edit-line" title="Modifier votre convention" id="update_convention_{{ convention.uuid }}">
-                                                        Edit
-                                                    </button>
-                                                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                                        document.addEventListener('DOMContentLoaded', function () {
-                                                            document.getElementById('update_convention_{{ convention.uuid }}')
-                                                                .addEventListener('click', function(){ location.href="{% url 'conventions:selection_update' convention_uuid=convention.uuid %}" });
-                                                        });
-                                                    </script>
+                                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:selection_update' convention_uuid=convention.uuid %}" >
+                                                        <span class="fr-fi-edit-line" aria-hidden="true"></span>
+                                                    </a>
+                                                    {% include "conventions/actions/delete.html" with convention=convention %}
                                                 {% else %}
-                                                    <button class="fr-btn fr-fi-eye-line" title="Visualiser votre convention" id="view_convention_{{ convention.uuid }}">
-                                                        View
-                                                    </button>
-                                                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                                        document.addEventListener('DOMContentLoaded', function () {
-                                                            document.getElementById('view_convention_{{ convention.uuid }}')
-                                                                .addEventListener('click', function(){ location.href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}" });
-                                                        });
-                                                    </script>
+                                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}" >
+                                                        <span class="fr-fi-eye-line" aria-hidden="true"></span>
+                                                    </a>
                                                 {% endif %}
                                             {% endif %}
                                             {% if request.user.is_instructeur %}
                                                 {% if convention.is_instructeur_editable %}
-                                                    <button class="fr-btn fr-fi-edit-line" title="Modifier votre convention" id="update_convention_{{ convention.uuid }}">
-                                                        Edit
-                                                    </button>
-                                                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                                        document.addEventListener('DOMContentLoaded', function () {
-                                                            document.getElementById('update_convention_{{ convention.uuid }}')
-                                                                .addEventListener('click', function(){ location.href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}" });
-                                                        });
-                                                    </script>
+                                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}" >
+                                                        <span class="fr-fi-edit-line" aria-hidden="true"></span>
+                                                    </a>
                                                 {% endif %}
                                             {% endif %}
                                         </td>
