--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -52,12 +52,12 @@
                     <div class="fr-header__tools">
                         <div class="fr-header__tools-links">
                             {% if user.is_authenticated %}
-                                <ul class="fr-links-group">
-                                    <li class="fr-mx-3w">
-                                        Bonjour
+                                <ul class="fr-btns-group fr-btns-group--inline">
+                                    <li class="fr-mx-3w fr-mt-3w">
+                                        Bonjour&nbsp;
                                         <strong>{{ user }}</strong>
                                     </li>
-                                    <li>
+                                    <li class="fr-mt-2w">
                                         <button class="fr-btn fr-btn--secondary" id='deconnexion'>
                                             <span class="fr-fi-close-circle-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
                                         </button>
